Tarea de los Bonos mas algunas cositas de la tarea de Analiticas

--- a/centro medico/app.config
+++ b/centro medico/app.config
@@ -10,7 +10,7 @@
 		</sectionGroup>
 	</configSections>
 		<connectionStrings>
-    <add name="centro_medico.My.MySettings.CMConnectionString" connectionString="Data Source=JUAN-PC;Initial Catalog=CMCONSTITUCION;Integrated Security=True"
+    <add name="centro_medico.My.MySettings.CMConnectionString" connectionString="Data Source=localhost;Initial Catalog=siesta;User ID=sa;Password=sqladmin."
       providerName="System.Data.SqlClient" />
     <add name="centro_medico.My.MySettings.constitucionConnectionString"
       connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=constitucion;Integrated Security=True"
