--- a/centro medico/app.config
+++ b/centro medico/app.config
@@ -10,20 +10,14 @@
 		</sectionGroup>
 	</configSections>
 		<connectionStrings>
-      <add name="centro_medico.My.MySettings.CMConnectionString" connectionString="Data Source=DAW-JBLANCO\MSSQLSERVERLOCAL;Initial Catalog=Siesta;User ID=sa;Password=Admin123"
-          providerName="System.Data.SqlClient" />
-      <add name="centro_medico.My.MySettings.constitucionConnectionString"
-          connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=constitucion;Integrated Security=True"
-          providerName="System.Data.SqlClient" />
-      <add name="centro_medico.My.MySettings.CMSIESTAConnectionString"
-          connectionString="Data Source=ruthi-pc\;Initial Catalog=CMSIESTA;User ID=sa"
-          providerName="System.Data.SqlClient" />
-      <add name="centro_medico.My.MySettings.SiestaConnectionString"
-          connectionString="Data Source=DAW-JBLANCO\MSSQLSERVERLOCAL;Initial Catalog=Siesta;Integrated Security=True"
-          providerName="System.Data.SqlClient" />
-      <add name="centro_medico.My.MySettings.SiestaConnectionString1"
-          connectionString="Data Source=DAW-JBLANCO\MSSQLSERVERLOCAL;Initial Catalog=Siesta;Persist Security Info=True;User ID=sa"
-          providerName="System.Data.SqlClient" />
+    <add name="centro_medico.My.MySettings.CMConnectionString" connectionString="Data Source=JUAN-PC;Initial Catalog=CMCONSTITUCION;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="centro_medico.My.MySettings.constitucionConnectionString"
+      connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=constitucion;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="centro_medico.My.MySettings.CMSIESTAConnectionString"
+      connectionString="Data Source=ruthi-pc\;Initial Catalog=CMSIESTA;User ID=sa;Password=.sqladmin."
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 		<system.diagnostics>
 				<sources>
@@ -51,15 +45,15 @@
 	
 		<applicationSettings>
 				<centro_medico.My.MySettings>
-        <setting name="Demo" serializeAs="String">
-            <value>False</value>
-        </setting>
-        <setting name="IncemeVersion" serializeAs="String">
-            <value />
-        </setting>
-        <setting name="RequiredDBVersion" serializeAs="String">
-            <value />
-        </setting>
+      <setting name="Demo" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="IncemeVersion" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="RequiredDBVersion" serializeAs="String">
+        <value />
+      </setting>
     </centro_medico.My.MySettings>
 		</applicationSettings>
   
