--- a/centro medico/centro medico.vbproj
+++ b/centro medico/centro medico.vbproj
@@ -200,6 +200,14 @@
     </Reference>
     <Reference Include="System.Transactions" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Goltratec\DLLS\System.Windows.Forms.DataVisualization.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Windows.Forms.DataVisualization.Design, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Goltratec\DLLS\System.Windows.Forms.DataVisualization.Design.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -242,6 +250,12 @@
       <DependentUpon>form_bonos_no_agotados.vb</DependentUpon>
     </Compile>
     <Compile Include="formularios\form_bonos_no_agotados.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formularios\Form_DashBoard.Designer.vb">
+      <DependentUpon>Form_DashBoard.vb</DependentUpon>
+    </Compile>
+    <Compile Include="formularios\Form_DashBoard.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmConnectionDB.Designer.vb">
@@ -1431,6 +1445,12 @@
     <Compile Include="UI\Templates\frmTemplates_ADD.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="UI\test.Designer.vb">
+      <DependentUpon>test.vb</DependentUpon>
+    </Compile>
+    <Compile Include="UI\test.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="UI\Test\frmControlsTest.Designer.vb">
       <DependentUpon>frmControlsTest.vb</DependentUpon>
     </Compile>
@@ -2216,6 +2236,56 @@
     <Content Include="RDLC\img\recetaimpresavalenciano.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\24-control-stop21.png" />
+    <Content Include="Resources\adn.jpg" />
+    <Content Include="Resources\asistente.jpg" />
+    <Content Include="Resources\Bar Chart - Copy.png" />
+    <Content Include="Resources\cash_register16x16.png" />
+    <Content Include="Resources\cash_register24x24.png" />
+    <Content Include="Resources\cash_register32x32.png" />
+    <Content Include="Resources\ClinicaPilar1_Header.jpg" />
+    <Content Include="Resources\communication.ico" />
+    <Content Include="Resources\confirmado.ico" />
+    <Content Include="Resources\confirmado.png" />
+    <Content Include="Resources\confirmado_urgente.ico" />
+    <Content Include="Resources\confirmado_urgente.png" />
+    <Content Include="Resources\del.ico" />
+    <Content Include="Resources\del.png" />
+    <Content Include="Resources\diente.ico" />
+    <Content Include="Resources\diente.png" />
+    <Content Include="Resources\dollar.ico" />
+    <Content Include="Resources\email ico.png" />
+    <Content Include="Resources\Empresa.bmp" />
+    <Content Include="Resources\empresa.gif" />
+    <Content Include="Resources\euro16x16.ico" />
+    <Content Include="Resources\Exit copy.gif" />
+    <Content Include="Resources\factura16x16.png" />
+    <Content Include="Resources\factura24x24.png" />
+    <Content Include="Resources\female14.png" />
+    <Content Include="Resources\historial.png" />
+    <Content Include="Resources\Mimetype-vcalendar-icon.png" />
+    <Content Include="Resources\movie_folder.ico" />
+    <Content Include="Resources\nuevo.ico" />
+    <Content Include="Resources\nuevo.png" />
+    <Content Include="Resources\Package_Closed_ 16x16.png" />
+    <Content Include="Resources\patient16x16.png" />
+    <Content Include="Resources\presupuesto.ico" />
+    <Content Include="Resources\presupuesto.png" />
+    <Content Include="Resources\Print16x16.png" />
+    <Content Include="Resources\Profile copy.gif" />
+    <Content Include="Resources\realizado.ico" />
+    <Content Include="Resources\realizado.png" />
+    <Content Include="Resources\receipt16x16.png" />
+    <Content Include="Resources\Recibos.ico" />
+    <Content Include="Resources\report.ico" />
+    <Content Include="Resources\report.png" />
+    <Content Include="Resources\sms_protocol.png" />
+    <Content Include="Resources\ticket16x16.ico" />
+    <Content Include="Resources\ticket16x16.png" />
+    <Content Include="Resources\ticket32x32.png" />
+    <Content Include="Resources\urgente.ico" />
+    <Content Include="Resources\urgente.png" />
+    <Content Include="Resources\warning-icon.png" />
     <Content Include="Scripts\db_1.0.3.7.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -2235,6 +2305,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Scripts\db_1.0.3.7.sql" />
+    <Content Include="Scripts\db_1.0.3.8.sql" />
+    <Content Include="Scripts\db_1.0.3.9.sql" />
+    <Content Include="Scripts\db_1.0.4.0.sql" />
+    <Content Include="Scripts\db_1.0.4.1.sql" />
+    <Content Include="Scripts\log.txt" />
+    <Content Include="Scripts\Query Dashboard.sql" />
     <Content Include="UI\Dental\Icons\confirmado.ico" />
     <Content Include="UI\Dental\Icons\confirmado.png" />
     <Content Include="UI\Dental\Icons\confirmado_urgente.ico" />
@@ -2269,6 +2345,7 @@
     <None Include="My Project\DataSources\PLANTILLAANALITICA1.datasource" />
     <None Include="My Project\DataSources\RecetaItem.datasource" />
     <None Include="My Project\DataSources\USUARIO.datasource" />
+    <None Include="Resources\Folder_by_Delacro.zip" />
     <None Include="Resources\FormatoOficialReceta.png" />
     <None Include="Resources\FormatoOficialReceta1.png" />
     <Content Include="RDLC\custom\dental ramirez\logo.jpg">
@@ -2311,6 +2388,10 @@
     <None Include="My Project\DataSources\RC_ParcialHeader.datasource" />
     <None Include="My Project\DataSources\RC_ParcialHeader1.datasource" />
     <None Include="My Project\DataSources\RC_Seguimiento.datasource" />
+    <None Include="Resources\free_financial_icon_set_finance.zip" />
+    <None Include="Resources\free_windows7_icons_vacation.zip" />
+    <None Include="Resources\office_space_icon_set.zip" />
+    <None Include="Resources\pc.de-hamburg-icon-pack.zip" />
     <None Include="Resources\private.ico" />
     <None Include="Resources\male14.png" />
     <Content Include="Scripts\db_1.0.2.5.sql">
@@ -2362,6 +2443,7 @@
     <None Include="Resources\edit.ico" />
     <None Include="Resources\lock.ico" />
     <Content Include="Resources\textAreaResizeCorner.png" />
+    <None Include="Resources\Thumbs.db" />
     <None Include="Resources\yellow_plus.jpg" />
     <None Include="Resources\yellow_cross.jpg" />
     <Content Include="Scripts\db_0.0.0.1_dbcreator.sql">
@@ -2444,6 +2526,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="formularios\form_conceptos_facturables.resx">
       <DependentUpon>form_conceptos_facturables.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formularios\Form_DashBoard.resx">
+      <DependentUpon>Form_DashBoard.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formularios\listado_faltas.resx">
       <DependentUpon>listado_faltas.vb</DependentUpon>
@@ -2788,6 +2873,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <EmbeddedResource Include="RDLC\default\PacientesBonosNoAgotados.rdlc" />
+    <EmbeddedResource Include="RDLC\default\R1_CitasXEstado.rdlc" />
+    <EmbeddedResource Include="RDLC\default\R2_PacientesAltaXMes.rdlc" />
+    <EmbeddedResource Include="RDLC\default\R3_CitasAtendidasMedicosXDias.rdlc" />
+    <EmbeddedResource Include="RDLC\default\R4_CitasEspecialidadXMes.rdlc" />
+    <EmbeddedResource Include="RDLC\default\R5_Top10TratamientosXMes.rdlc" />
+    <EmbeddedResource Include="RDLC\default\R6_EstadiaticaDental.rdlc" />
     <EmbeddedResource Include="RDLC\default\RecetaOficialImpresa.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -4362,6 +4453,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Templates\frmTemplates_ADD.resx">
       <DependentUpon>frmTemplates_ADD.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\test.resx">
+      <DependentUpon>test.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Test\frmControlsTest.resx">
       <DependentUpon>frmControlsTest.vb</DependentUpon>
