synchronizing to Github

--- a/centro medico/app.config
+++ b/centro medico/app.config
@@ -10,13 +10,7 @@
 		</sectionGroup>
 	</configSections>
 		<connectionStrings>
-    <add name="centro_medico.My.MySettings.CMConnectionString" connectionString="Data Source=JUAN-PC;Initial Catalog=CMCONSTITUCION;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="centro_medico.My.MySettings.constitucionConnectionString"
-      connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=constitucion;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="centro_medico.My.MySettings.CMSIESTAConnectionString"
-      connectionString="Data Source=ruthi-pc\;Initial Catalog=CMSIESTA;User ID=sa;Password=.sqladmin."
+    <add name="centro_medico.My.MySettings.CMConnectionString" connectionString="Data Source=DAW-JBLANCO\MSSQLSERVERLOCAL;Initial Catalog=Siesta;User ID=sa;Password=Admin123"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
 		<system.diagnostics>
