--- a/FirmaPDF/iTextSharpSign.csproj
+++ b/FirmaPDF/iTextSharpSign.csproj
@@ -35,9 +35,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="itextsharp, Version=3.1.0.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\itextsharp\itextsharp.dll</HintPath>
+    <Reference Include="itextsharp">
+      <HintPath>..\DLLS\itextsharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
