--- a/centro medico/centro medico.vbproj
+++ b/centro medico/centro medico.vbproj
@@ -2451,8 +2451,12 @@
     <Content Include="Scripts\db_1.0.4.0.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Scripts\db_1.0.4.1.sql" />
-    <Content Include="Scripts\db_1.0.4.2.sql" />
+    <Content Include="Scripts\db_1.0.4.1.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\db_1.0.4.2.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="UI\Dental\Icons\confirmado.ico" />
     <Content Include="UI\Dental\Icons\confirmado.png" />
     <Content Include="UI\Dental\Icons\confirmado_urgente.ico" />
